--- a/order/src/main/resources/static/backup/v2/home/home.html
+++ b/order/src/main/resources/static/backup/v2/home/home.html
@@ -36,7 +36,7 @@
                 </div>
             </td>
             <td style="width:auto">
-                <img src="/img/Home.png" style="width: 550px; height: 300px;">
+                <img src="/img/Ship.PNG" style="width: 700px">
             </td>
         </tr>
     </table>
