--- a/order/src/main/resources/static/backup/v2/member/member.html
+++ b/order/src/main/resources/static/backup/v2/member/member.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Order List</title>
+    <title>Member List</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
@@ -18,49 +18,40 @@
 
     <div id="search"
          style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
-        <h3>[ Order List <span style="font-size:30px;">&#129534;</span> ]</h3>
+        <h3>[ Member Info <span style="font-size:30px;">&#128699;</span> ]</h3>
 
-        <form action="/v2/order_search" autocomplete="on" method="post" name="fm_order">
+        <form action="/v2/member_search" autocomplete="on" method="post" name="fm_member">
             <fieldset>
                 <legend> [검색조건]</legend>
                 <label>등록기간</label><input id="start_date" max="2030-12-31" min="2020-01-01" name="start_date"
                                           type="date">
                 - <input id="end_date" max="2030-12-31" min="2020-01-01" name="end_date" type="date">
-                &nbsp;&nbsp;
-                <label>메뉴명</label> <input id="item" name="item" type="text">
-                &nbsp;&nbsp;
+                &nbsp;&nbsp
                 <label>고객명</label> <input id="name" name="name" type="text">
-                </select>
                 &nbsp;&nbsp;<input style="width: 80px;height: 30px;font-weight: bold; font-size: medium" type="submit"
                                    value="조회">
-                <!-- <a href="javascript:loadDocArray()">test</a> -->
-                <!--        <label>CheckBox : </label><span id="idCheckBox"></span>-->
             </fieldset>
         </form>
     </div>
-
     <table class="table">
         <thead>
         <tr class="tr_td">
-            <th>주문번호</th>
-            <th>커피No</th>
-            <th>메뉴명</th>
-            <th>가격</th>
+            <th>Chk</th>
             <th>고객ID</th>
             <th>고객명</th>
-            <th>주문일자</th>
+            <th>이메일</th>
+            <th>권한</th>
+            <th>등록일</th>
         </tr>
         </thead>
 
-        <tbody id="t_body" >
-        <!--- 데이타 출력 부분 -->
+        <tbody id="t_body">
         <tr class="tr_td" th:each="list : ${list}">
-            <th th:text="${list.getNo()}">주문번호</th>
-            <td th:text="${list.getItem_no()}">커피No</td>
-            <td th:text="${list.getItem()}">메뉴명</td>
-            <td th:text="${#numbers.formatInteger(list.getPrice(),0,'COMMA')}">가격</td>
-            <td th:text="${list.getMember_id()}">고객ID</td>
+            <td><input name="chkMemberNo" th:value="${list.getNo()}" type="checkbox"></td>
+            <th th:text="${list.getMember_id()}">고객ID</th>
             <td th:text="${list.getName()}">고객명</td>
+            <td th:text="${list.getEmail()}">이메일</td>
+            <td th:text="${list.getRole()}">권한</td>
             <td th:text="${list.getReg_day()}">등록일</td>
         </tr>
         </tbody>
@@ -69,13 +60,11 @@
 
 <!-- 푸터 위치 -->
 <th:block th:replace="~{/v2/comm/footer :: footerFragment}"></th:block>
-
-
 <script>
     const startNow = new Date();
     const endNow = new Date();
     const startTime = new Date(startNow.setDate(startNow.getDate() - 30));
-    const endTime = new Date(endNow.setHours(endNow.getHours() + 9));
+    const endTime = new Date(endNow.setDate(endNow.getDate() + 1));
     document.getElementById("start_date").value= startTime.toISOString().slice(0,10);
     document.getElementById("end_date").value= endTime.toISOString().slice(0,10);
 </script>
