--- a/order/src/main/resources/static/backup/v2/order/order.html
+++ b/order/src/main/resources/static/backup/v2/order/order.html
@@ -42,6 +42,7 @@
     <table class="table">
         <thead>
         <tr class="tr_td">
+            <th>Chk</th>
             <th>주문번호</th>
             <th>커피No</th>
             <th>메뉴명</th>
@@ -55,6 +56,7 @@
         <tbody id="t_body" >
         <!--- 데이타 출력 부분 -->
         <tr class="tr_td" th:each="list : ${list}">
+            <td><input name="chkOrderNo" th:value="${list.getNo()}" type="checkbox"></td>
             <th th:text="${list.getNo()}">주문번호</th>
             <td th:text="${list.getItem_no()}">커피No</td>
             <td th:text="${list.getItem()}">메뉴명</td>
@@ -72,10 +74,10 @@
 
 
 <script>
-    const startNow = new Date();
+  const startNow = new Date();
     const endNow = new Date();
     const startTime = new Date(startNow.setDate(startNow.getDate() - 30));
-    const endTime = new Date(endNow.setHours(endNow.getHours() + 9));
+    const endTime = new Date(endNow.setDate(endNow.getDate() + 1));
     document.getElementById("start_date").value= startTime.toISOString().slice(0,10);
     document.getElementById("end_date").value= endTime.toISOString().slice(0,10);
 </script>
